# Coursework-2

Coursework-1/: README.md  pyproject.toml  requirements.txt
Coursework-1/data/: InternationalVisitorArrivalsByInboundTourismMarketsSeaMonthly.csv
Coursework-1/outputs/: missing_by_series.csv  observations_long.csv  prep_rebound_by_market.csv  prep_regional_comparison.csv  prep_seasonality.csv  series_master.csv  sql_monthly_totals.csv  sql_top15_latest.csv  top10_latest.csv  visitor_arrivals.db
Coursework-1/sql/: schema.sql
Coursework-1/src/: create_db.py  example_queries.py  explore_international_visitors.py  parse_international_visitors.py  prepare_views.py
Coursework-1/src/tourism_timeseries/: __init__.py  analysis.py  database.py  models.py
Coursework-1/tests/: test_analysis.py
