[project]
name = "comp0035-coursework1"
version = "0.1.0"
description = "International Visitor Arrivals data pipeline"
authors = [{ name = "Chen123-hongtai" }]
dependencies = ["pandas", "numpy", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
